--- a/package.json
+++ b/package.json
@@ -1,26 +1,72 @@
 {
-  "name": "ant-vue-blog-font",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
-  },
-  "dependencies": {
-    "vue": "^2.5.21",
-    "vue-router": "^3.0.1",
-    "vuex": "^3.0.1"
-  },
-  "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.3.0",
-    "@vue/cli-plugin-eslint": "^3.3.0",
-    "@vue/cli-service": "^3.3.0",
-    "babel-eslint": "^10.0.1",
-    "eslint": "^5.8.0",
-    "eslint-plugin-vue": "^5.0.0",
-    "node-sass": "^4.9.0",
-    "sass-loader": "^7.0.1",
-    "vue-template-compiler": "^2.5.21"
-  }
+    "name": "ant-vue-ssr-template",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "serve": "vue-cli-service serve",
+        "build": "vue-cli-service build",
+        "build:client": "vue-cli-service build",
+        "build:server": "cross-env WEBPACK_TARGET=node vue-cli-service build",
+        "build:win": "npm run build:server && mv dist/vue-ssr-server-bundle.json bundle && npm run build:client && mv bundle dist/vue-ssr-server-bundle.json",
+        "start": "cross-env NODE_ENV=production node ./server/ssr.js",
+        "lint": "vue-cli-service lint",
+        "dev:serve": "cross-env WEBPACK_TARGET=node node ./server/ssr.js",
+        "dev": "concurrently \"npm run serve\" \"npm run dev:serve\" "
+    },
+    "dependencies": {
+        "axios": "^0.18.0",
+        "koa": "^2.5.3",
+        "koa-router": "^7.4.0",
+        "koa-send": "^5.0.0",
+        "koa-static": "^5.0.0",
+        "vue": "^2.5.17",
+        "vue-router": "^3.0.1",
+        "vuex": "^3.0.1"
+    },
+    "devDependencies": {
+        "@vue/cli-plugin-babel": "^3.0.1",
+        "@vue/cli-plugin-eslint": "^3.0.1",
+        "@vue/cli-service": "^3.0.1",
+        "@vue/eslint-config-standard": "^3.0.3",
+        "babel-eslint": "^10.0.1",
+        "concurrently": "^4.0.1",
+        "cross-env": "^5.2.0",
+        "eslint": "^5.8.0",
+        "eslint-plugin-node": "^8.0.1",
+        "eslint-plugin-promise": "^4.0.1",
+        "eslint-plugin-standard": "^4.0.0",
+        "eslint-plugin-vue": "^5.0.0",
+        "lodash.merge": "^4.6.1",
+        "memory-fs": "^0.4.1",
+        "node-sass": "^4.9.0",
+        "sass-loader": "^7.0.1",
+        "vue-server-renderer": "^2.5.17",
+        "vue-template-compiler": "^2.5.21",
+        "webpack": "^4.20.2",
+        "webpack-node-externals": "^1.7.2"
+    },
+    "eslintConfig": {
+        "root": true,
+        "env": {
+            "node": true
+        },
+        "extends": [
+            "plugin:vue/essential",
+            "@vue/standard"
+        ],
+        "rules": {},
+        "parserOptions": {
+            "parser": "babel-eslint"
+        }
+    },
+    "postcss": {
+        "plugins": {
+            "autoprefixer": {}
+        }
+    },
+    "browserslist": [
+        "> 1%",
+        "last 2 versions",
+        "not ie <= 8"
+    ]
 }
